# freeciv-kde

./: README.md  environment  freeciv-kde.pro  qtlogging.ini
data/qmake/: freeciv.pro
data/qmake/client/: client.pro
data/qmake/client/agents/: agents.pro
data/qmake/client/luascript/: luascript.pro
data/qmake/common/: common.pro
data/qmake/common/aicore/: aicore.pro
data/qmake/common/networking/: networking.pro
data/qmake/common/scriptcore/: scriptcore.pro
data/qmake/dependencies/: dependencies.pro
data/qmake/dependencies/cvercmp/: cvercmp.pro
data/qmake/dependencies/lua-5.3/: lua.pro
data/qmake/dependencies/tolua-5.2/: tolua.pro
data/qmake/tools/: tools.pro
data/qmake/utility/: utility.pro
gui-kde/: BUGS  CMakeLists.txt  actionselector.cpp  actionselector.h  application.cpp  application.h  buildables.cpp  buildables.h  canvas.cpp  canvas.h  chatline.cpp  chatlineedit.cpp  chatlineedit.h  chatpane.cpp  chatpane.h  chatwindow.cpp  chatwindow.h  citizensdialog.cpp  citizensdialog.h  citizensdialog.ui  citydialog.cpp  citydialog.h  citydialog.ui  citydlg.cpp  citydlg.h  cityinfowidget.cpp  cityinfowidget.h  citymap.cpp  citymap.h  cityrep.cpp  cityrep.h  cityrep_g.cpp  cityview.cpp  cityview.h  cityview.ui  colorbarlabel.cpp  colorbarlabel.h  colors.cpp  colors.h  colors_g.cpp  (+183 more)
gui-kde/client/: CMakeLists.txt  chatline_g.cpp  cityrep_g.cpp  colors_g.cpp  dialogs_g.cpp  diplodlg_g.cpp  finddlg_g.cpp  helpdlg_g.cpp  inteldlg_g.cpp  mapctrl_g.cpp  mapview_g.cpp  menu_g.cpp  messagewin_g.cpp  optiondlg_g.cpp  pages_g.cpp  plrdlg_g.cpp  ratesdlg_g.cpp  repodlgs_g.cpp  spaceshipdlg_g.cpp  sprite_g.cpp
